==> MikroElektronika/mikrosdk_v2/targets/pic_32bit/mikroe/pic32/src/adc/implementation_2/hal_ll_adc.c <==
#include "hal_ll_adc.h"
#include "hal_ll_gpio.h"
#include "hal_ll_analog_in_map.h"
#define hal_ll_adc_get_module_state_address ( ( hal_ll_adc_handle_register_t * ) *handle )
#define hal_ll_adc_get_handle ( ( hal_ll_adc_handle_register_t * ) hal_ll_adc_get_module_state_address->hal_ll_adc_handle )
#define hal_ll_adc_get_base_from_hal_handle ( ( ( hal_ll_adc_hw_specifics_map_t * ) ( low_level_handle->hal_ll_adc_handle ) )->ch_enable )
#define hal_ll_adc_module_num( _module_num ) ( _module_num - 1 )
#define copy_reg( dest, source ) ( selected_reg( dest ) = selected_reg( source ) )
#define HAL_LL_ADCCON1_SELRES_12_BIT_BITS    ( ( uint32_t ) ( 3UL << 21 ) )
#define HAL_LL_ADCCON1_SELRES_10_BIT_BITS    ( ( uint32_t ) ( 2UL << 21 ) )
#define HAL_LL_ADCCON1_SELRES_8_BIT_BITS     ( ( uint32_t ) ( 1UL << 21 ) )
#define HAL_LL_ADCCON1_SELRES_6_BIT_BITS     ( ( uint32_t ) ( 0UL << 21 ) )
#define HAL_LL_ADCCON1_GSWTRG_BITS           ( ( uint32_t ) ( 0x1 ) )
#define HAL_LL_ADCCON1_ON_BIT                ( ( uint8_t ) 15 )
#define HAL_LL_ADCCON2_SAMC_BITS( x )        ( ( uint32_t ) ( (x) & 0x3ff ) )
#define HAL_LL_ADCCON2_ADCDIV_BITS( x )      ( ( uint32_t ) ( (x) & 0x7f  ) )
#define HAL_LL_ADCCON2_BGVRRDY_BIT           ( ( uint8_t ) 31 )
#define HAL_LL_ADCCON2_REFFLT_BIT            ( ( uint8_t ) 30 )
#define HAL_LL_ADCCON3_RQCNVRT_BIT           ( ( uint8_t ) 8 )
#define HAL_LL_ADCCON3_DIGEN_ALL_BITS        ( ( uint32_t ) 0xff0000 )

hal_ll_err_t hal_ll_adc_register_handle(
    hal_ll_pin_name_t               pin,
    hal_ll_adc_voltage_reference_t  vref_input,
    hal_ll_adc_resolution_t         resolution,
    hal_ll_adc_handle_register_t    *handle_map,
    uint8_t                         *hal_module_id
) {
    uint8_t index;
    hal_ll_pin_name_t pin_check_result = _hal_ll_adc_check_pins( pin, &index, handle_map );

    // see if requested pin supports analog input
    if ( HAL_LL_PIN_NC == pin_check_result ) {
        return HAL_LL_ADC_WRONG_PIN;
    }

    // switch only validates if the vref_input variable is in the enum range
    switch ( resolution )
    {
        case HAL_LL_ADC_RESOLUTION_10_BIT:
            hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_RESOLUTION_10_BIT;
            break;
        #ifdef PIC32MZxx
        case HAL_LL_ADC_RESOLUTION_12_BIT:
            hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_RESOLUTION_12_BIT;
            break;
        case HAL_LL_ADC_RESOLUTION_8_BIT:
            hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_RESOLUTION_8_BIT;
            break;
        case HAL_LL_ADC_RESOLUTION_6_BIT:
            hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_RESOLUTION_6_BIT;
            break;
        #endif

        default:
            return HAL_LL_ADC_UNSUPPORTED_RESOLUTION;
    }

    // set desired state of hardware to hardwer specific map
    switch ( vref_input )
    {
        case HAL_LL_ADC_VREF_EXTERNAL:
            hal_ll_adc_hw_specifics_map[pin_check_result].vref_input = HAL_LL_ADC_VREF_EXTERNAL;
            break;
        case HAL_LL_ADC_VREF_INTERNAL:
            hal_ll_adc_hw_specifics_map[pin_check_result].vref_input = HAL_LL_ADC_VREF_INTERNAL;
            break;
        case HAL_LL_ADC_VREF_DEFAULT:
            hal_ll_adc_hw_specifics_map[pin_check_result].vref_input = HAL_LL_ADC_VREF_DEFAULT;
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_VREF;
     }

    if ( hal_ll_adc_hw_specifics_map[pin_check_result].pin != pin ) {
        // copy pin information from 'analog in' list to hw specific map element at 'index' index
        _hal_ll_adc_map_pin( pin_check_result, index );
        // after the hw specific map has been mapped, mark it as uninitialized so next time it's used
        // it will trigger hal_ll_module_configure_adc to actualy initialize hardware
        handle_map[pin_check_result]->init_ll_state = false;
    }

    *hal_module_id = pin_check_result;

    // set register for configuring analog pin
    hal_ll_module_state[pin_check_result].hal_ll_adc_handle = ( handle_t * ) &hal_ll_adc_hw_specifics_map[pin_check_result].ch_enable;

    handle_map[pin_check_result]->hal_ll_adc_handle = ( handle_t * ) &hal_ll_module_state[pin_check_result].hal_ll_adc_handle;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_module_configure_adc( handle_t *handle ) {
    hal_ll_adc_hw_specifics_map_local = _hal_ll_get_specifics( handle );
    uint8_t index;
    uint16_t pin_check_result = _hal_ll_adc_check_pins( hal_ll_adc_hw_specifics_map_local->pin, &index, (void *)0 );

    if ( HAL_LL_PIN_NC == pin_check_result ) {
        return HAL_LL_ADC_WRONG_PIN;
    }

    // initialize adc registers
    _hal_ll_adc_init( hal_ll_adc_hw_specifics_map_local );

    hal_ll_module_state[pin_check_result].hal_ll_adc_handle = ( handle_t * )&hal_ll_adc_hw_specifics_map[pin_check_result].ch_enable;
    hal_ll_module_state[pin_check_result].init_ll_state = true;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_set_resolution( handle_t *handle, hal_ll_adc_resolution_t resolution ) {
    // this function will update low_level_handle
    hal_ll_adc_hw_specifics_map_local = _hal_ll_get_specifics( handle );

    switch ( resolution )
    {
        case HAL_LL_ADC_RESOLUTION_10_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_RESOLUTION_10_BIT;
            break;
        #ifdef PIC32MZxx
        case HAL_LL_ADC_RESOLUTION_12_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_RESOLUTION_12_BIT;
            break;
        case HAL_LL_ADC_RESOLUTION_8_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_RESOLUTION_8_BIT;
            break;
        case HAL_LL_ADC_RESOLUTION_6_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_RESOLUTION_6_BIT;
            break;
        #endif

        default:
            // in case of bad resolution function will fail leaving low_level handle marked as uninitialized
            // trigerring configure action from upper layer on next read
            low_level_handle->init_ll_state = false;
            return HAL_LL_ADC_UNSUPPORTED_RESOLUTION;
    }

    // reinitialize the hardware since resolution is changed
    _hal_ll_adc_init( hal_ll_adc_hw_specifics_map_local );

    // hardware is reinitialized, make sure low_level_handle reflects that
    low_level_handle->init_ll_state = true;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_read( handle_t *handle, uint16_t *read_buff )
{
    static const uint32_t *data_ptr = (uint32_t)HAL_LL_ADCDATA0_ADDRESS;

    hal_ll_adc_hw_specifics_map_local = _hal_ll_get_specifics( handle );

    uint8_t channel = hal_ll_adc_hw_specifics_map_local->channel;

    // remove all inputs
    clear_reg_bits( HAL_LL_ADCCON3_ADDRESS, HAL_LL_ADCCON3_ADINSEL_BITS_ALL );
    // writing to ADINSEL bits
    if ( 45 <= channel  ) {
        set_reg_bits( HAL_LL_ADCCON3_ADDRESS, channel - 45);         // channel to manually trigger
    } else {
        set_reg_bits( HAL_LL_ADCCON3_ADDRESS, channel );             // channel to manually trigger
    }

    set_reg_bit(HAL_LL_ADCCON3_ADDRESS, HAL_LL_ADCCON3_RQCNVRT_BIT); // manually trigger selected channel

    if ( 31 >= channel ) {
        while ( check_reg_bit( HAL_LL_ADCDSTAT1_ADDRESS, channel ) == 0 ) {
            continue;
        }
    } else if ( 45 <= channel ) {
        while ( check_reg_bit( HAL_LL_ADCDSTAT1_ADDRESS, (channel - 45) ) == 0 ) {
            continue;
        }
    } else {
        while ( check_reg_bit( HAL_LL_ADCDSTAT2_ADDRESS, (channel - 32) ) == 0 ) {
            continue;
        }
    }

    if ( 45 <= channel ) {
        channel -= 45;
    }

    // Changing the resolution of the ADC does not shift the result in the corresponding ADCDATAx
    // register. The result will still occupy 12 bits, with the corresponding lower unused bits set to ‘0’.
    // For example, a resolution of 6 bits will result in ADCDATAx<5:0> being set to ‘0’, and
    // ADCDATAx<11:6> holding the result.
    switch ( hal_ll_adc_hw_specifics_map_local->resolution )
    {
        case HAL_LL_ADC_RESOLUTION_10_BIT:
            *read_buff = data_ptr[channel] >> 2;
            break;
        case HAL_LL_ADC_RESOLUTION_8_BIT:
            *read_buff = data_ptr[channel] >> 4;
            break;
        case HAL_LL_ADC_RESOLUTION_6_BIT:
            *read_buff = data_ptr[channel] >> 6;
            break;

        default:
            // default for PIC32MZ is 12bit
            *read_buff = data_ptr[channel];
            break;
    }

    return HAL_LL_ADC_SUCCESS;
}

static hal_ll_pin_name_t _hal_ll_adc_check_pins( hal_ll_pin_name_t pin, uint8_t *index, hal_ll_adc_handle_register_t *handle_map ) {
    static uint8_t  pin_index = 0;
    static const uint16_t adc_map_size = sizeof( hal_ll_analog_in_register_list ) / sizeof( hal_ll_pin_channel_list_t );

    if ( HAL_LL_PIN_NC == pin ) {
        return HAL_LL_PIN_NC;
    }
    // search through hal_ll_analog_in_register_list for elemenet with 'pin' member
    // matching 'pin' function argument
    for ( pin_index = 0; pin_index < adc_map_size; pin_index++ ) {
        if ( hal_ll_analog_in_register_list[pin_index].pin == pin ) {
            *index = pin_index;
            return hal_ll_analog_in_register_list[ pin_index ].module_index;
        }
    }

    return HAL_LL_PIN_NC;
}

static void _hal_ll_adc_map_pin( uint8_t module_index, uint8_t index ) {
    // simple copying of elements
    hal_ll_adc_hw_specifics_map[ module_index ].pin       = hal_ll_analog_in_register_list[ index ].pin;
    hal_ll_adc_hw_specifics_map[ module_index ].ch_enable = hal_ll_analog_in_register_list[ index ].analog_in_register_addr;
    hal_ll_adc_hw_specifics_map[ module_index ].channel   = hal_ll_analog_in_register_list[ index ].channel;
}

static void _hal_ll_adc_hw_init(
    uint32_t channel,
    hal_ll_adc_resolution_t resolution,
    hal_ll_adc_voltage_reference_t vref
) {
    // necesary copy of calibration data. Microchip why?
    copy_reg( HAL_LL_ADC0CFG_ADDRESS, HAL_LL_DEVADC0_ADDRESS );
    copy_reg( HAL_LL_ADC1CFG_ADDRESS, HAL_LL_DEVADC1_ADDRESS );
    copy_reg( HAL_LL_ADC2CFG_ADDRESS, HAL_LL_DEVADC2_ADDRESS );
    copy_reg( HAL_LL_ADC3CFG_ADDRESS, HAL_LL_DEVADC3_ADDRESS );
    copy_reg( HAL_LL_ADC4CFG_ADDRESS, HAL_LL_DEVADC4_ADDRESS );
    copy_reg( HAL_LL_ADC7CFG_ADDRESS, HAL_LL_DEVADC7_ADDRESS );

    // clear control registers
    clear_reg( HAL_LL_ADCCON1_ADDRESS );
    clear_reg( HAL_LL_ADCCON2_ADDRESS );
    clear_reg( HAL_LL_ADCCON3_ADDRESS );
    clear_reg( HAL_LL_ADCANCON_ADDRESS );
    clear_reg( HAL_LL_ADCTRGSNS_ADDRESS );

    // configure all channels as single-ended, unipolar inputs
    clear_reg( HAL_LL_ADCIMCON1_ADDRESS );
    clear_reg( HAL_LL_ADCIMCON2_ADDRESS );
    clear_reg( HAL_LL_ADCIMCON3_ADDRESS );

    // disable all global interrupts
    clear_reg( HAL_LL_ADCGIRQEN1_ADDRESS );
    clear_reg( HAL_LL_ADCGIRQEN2_ADDRESS );

    // disable all early interrupts
    clear_reg( HAL_LL_ADCEIEN1_ADDRESS );
    clear_reg( HAL_LL_ADCEIEN2_ADDRESS );

    // disable digital comparators
    clear_reg( HAL_LL_ADCCMPCON1_ADDRESS );
    clear_reg( HAL_LL_ADCCMPCON2_ADDRESS );
    clear_reg( HAL_LL_ADCCMPCON3_ADDRESS );

    // disable oversampling filters
    clear_reg( HAL_LL_ADCFLTR1_ADDRESS );
    clear_reg( HAL_LL_ADCFLTR2_ADDRESS );
    clear_reg( HAL_LL_ADCFLTR3_ADDRESS );
    clear_reg( HAL_LL_ADCFLTR4_ADDRESS );
    clear_reg( HAL_LL_ADCFLTR5_ADDRESS );
    clear_reg( HAL_LL_ADCFLTR6_ADDRESS );

    uint32_t adctime_resolution_mask;
    switch ( resolution )
    {
        case HAL_LL_ADC_RESOLUTION_12_BIT:
            set_reg_bits( HAL_LL_ADCCON1_ADDRESS, HAL_LL_ADCCON1_SELRES_12_BIT_BITS );
            adctime_resolution_mask  = HAL_LL_ADCTIME_SELRES_12_BIT_BITS;
            break;
        case HAL_LL_ADC_RESOLUTION_10_BIT:
            set_reg_bits( HAL_LL_ADCCON1_ADDRESS, HAL_LL_ADCCON1_SELRES_10_BIT_BITS );
            adctime_resolution_mask  = HAL_LL_ADCTIME_SELRES_10_BIT_BITS;
            break;
        case HAL_LL_ADC_RESOLUTION_8_BIT:
            set_reg_bits( HAL_LL_ADCCON1_ADDRESS, HAL_LL_ADCCON1_SELRES_8_BIT_BITS );
            adctime_resolution_mask  = HAL_LL_ADCTIME_SELRES_8_BIT_BITS;
            break;
        case HAL_LL_ADC_RESOLUTION_6_BIT:
            set_reg_bits( HAL_LL_ADCCON1_ADDRESS, HAL_LL_ADCCON1_SELRES_6_BIT_BITS );
            adctime_resolution_mask  = HAL_LL_ADCTIME_SELRES_6_BIT_BITS;
            break;

        default:
            /* unreachable */
            break;
    }

    // scan Trig Source Select (Global Software Trigger (GSWTRG))
    set_reg_bits( HAL_LL_ADCCON1_ADDRESS, HAL_LL_ADCCON1_GSWTRG_BITS );

    // ADCCON2
    // ADC7 Sample Time (70 * Tad7)
    set_reg_bits( HAL_LL_ADCCON2_ADDRESS, HAL_LL_ADCCON2_SAMC_BITS(1) );
    // ADC7 Clock Divider (Divide by 2)
    set_reg_bits( HAL_LL_ADCCON2_ADDRESS, HAL_LL_ADCCON2_ADCDIV_BITS(1) );

    // ADCCON3
    set_reg_bits(HAL_LL_ADCCON3_ADDRESS, HAL_LL_ADCCON3_ADCSEL_TCLK_BITS);
    set_reg_bits(HAL_LL_ADCCON3_ADDRESS, HAL_LL_ADCCON3_CONCLKDIV_BITS(1));

    switch ( vref ) // Voltage Reference Input Selection (AVdd, AVss)
    {
        case HAL_LL_ADC_VREF_DEFAULT:
        case HAL_LL_ADC_VREF_EXTERNAL:
            set_reg_bits( HAL_LL_ADCCON3_ADDRESS, HAL_LL_ADCCON3_VREFSEL_EXTERNAL_BITS );
            break;
        case HAL_LL_ADC_VREF_INTERNAL:
            set_reg_bits( HAL_LL_ADCCON3_ADDRESS, HAL_LL_ADCCON3_VREFSEL_INTERNAL_BITS );
            break;

        default:
            // used by the ll adc functions, wich will validate that vreft is withing enum bounds
            break;
    }

    clear_reg( HAL_LL_ADC0TIME_ADDRESS );
    clear_reg( HAL_LL_ADC1TIME_ADDRESS );
    clear_reg( HAL_LL_ADC2TIME_ADDRESS );
    clear_reg( HAL_LL_ADC3TIME_ADDRESS );
    clear_reg( HAL_LL_ADC4TIME_ADDRESS );

    // select ADC sample time and conversion clock, x bit res, sampling time of
    // 5 * TADx
    set_reg_bits( HAL_LL_ADC0TIME_ADDRESS, HAL_LL_ADCTIME_ADCDIV_BITS(1) );
    set_reg_bits( HAL_LL_ADC1TIME_ADDRESS, HAL_LL_ADCTIME_ADCDIV_BITS(1) );
    set_reg_bits( HAL_LL_ADC2TIME_ADDRESS, HAL_LL_ADCTIME_ADCDIV_BITS(1) );
    set_reg_bits( HAL_LL_ADC3TIME_ADDRESS, HAL_LL_ADCTIME_ADCDIV_BITS(1) );
    set_reg_bits( HAL_LL_ADC4TIME_ADDRESS, HAL_LL_ADCTIME_ADCDIV_BITS(1) );

    set_reg_bits( HAL_LL_ADC0TIME_ADDRESS, HAL_LL_ADCTIME_SAMC_BITS(1) );
    set_reg_bits( HAL_LL_ADC1TIME_ADDRESS, HAL_LL_ADCTIME_SAMC_BITS(1) );
    set_reg_bits( HAL_LL_ADC2TIME_ADDRESS, HAL_LL_ADCTIME_SAMC_BITS(1) );
    set_reg_bits( HAL_LL_ADC3TIME_ADDRESS, HAL_LL_ADCTIME_SAMC_BITS(1) );
    set_reg_bits( HAL_LL_ADC4TIME_ADDRESS, HAL_LL_ADCTIME_SAMC_BITS(1) );

    set_reg_bits( HAL_LL_ADC0TIME_ADDRESS, adctime_resolution_mask );
    set_reg_bits( HAL_LL_ADC1TIME_ADDRESS, adctime_resolution_mask );
    set_reg_bits( HAL_LL_ADC2TIME_ADDRESS, adctime_resolution_mask );
    set_reg_bits( HAL_LL_ADC3TIME_ADDRESS, adctime_resolution_mask );
    set_reg_bits( HAL_LL_ADC4TIME_ADDRESS, adctime_resolution_mask );


    // select analog input for ADC modules, no presync trigger, not sync sampling
    clear_reg( HAL_LL_ADCTRGMODE_ADDRESS );

    // common scan select skip for input scan
    clear_reg( HAL_LL_ADCCSS1_ADDRESS );
    clear_reg( HAL_LL_ADCCSS2_ADDRESS );

    // wake-up Clock Count (2^7 Clocks)
    set_reg_bits( HAL_LL_ADCANCON_ADDRESS, HAL_LL_ADCANCON_WKUPCLKCNT_BITS(7) );

    // set up trigger sources
    clear_reg( HAL_LL_ADCTRGSNS_ADDRESS );

    // set up software triggering - need this for each desired channel
    set_reg_bits( HAL_LL_ADCTRG1_ADDRESS, HAL_LL_ADCTRG_TRGSRC_ALL_BITS );
    set_reg_bits( HAL_LL_ADCTRG2_ADDRESS, HAL_LL_ADCTRG_TRGSRC_ALL_BITS );
    set_reg_bits( HAL_LL_ADCTRG3_ADDRESS, HAL_LL_ADCTRG_TRGSRC_ALL_BITS );

    if ( channel >= 45 ) {
        set_reg_bits(HAL_LL_ADCTRGMODE_ADDRESS, HAL_LL_ADCTRGMODE_SHxALT_BITS(channel));
    }

    // turn on ADC module
    set_reg_bit( HAL_LL_ADCCON1_ADDRESS, HAL_LL_ADCCON1_ON_BIT );

    // let Vref stabilize
    while ( !check_reg_bit( HAL_LL_ADCCON2_ADDRESS, HAL_LL_ADCCON2_BGVRRDY_BIT ) ) {
        continue;
    }

    while ( check_reg_bit( HAL_LL_ADCCON2_ADDRESS, HAL_LL_ADCCON2_REFFLT_BIT ) ) {
        continue;
    }

    // enable clk to analog - need this for each desired channel
    set_reg_bits( HAL_LL_ADCANCON_ADDRESS, HAL_LL_ADCANCON_ANEN_ALL_BITS );

    // wait for ADC ready
    while ( read_reg_bits( HAL_LL_ADCANCON_ADDRESS, HAL_LL_ADCANCON_WKRDY_ALL_BITS ) ) {
        continue;
    }

    // enable ADC - need this for each desired channel
    set_reg_bits( HAL_LL_ADCCON3_ADDRESS, HAL_LL_ADCCON3_DIGEN_ALL_BITS );
}

static void _hal_ll_adc_init( hal_ll_adc_hw_specifics_map_t *map ) {
    #ifdef HAL_LL_PERIPHERAL_MODULE_DISABLE
    clear_reg_bit( HAL_LL_PMD1_ADDRESS, HAL_LL_PMD1_ADCMD_BIT );
    #endif

    //  set ANSELx register flag to  1
    hal_ll_gpio_port_analog_input(
        hal_ll_gpio_port_base_map( hal_ll_gpio_port_index( map->pin ) ),
        map->pin
    );

    _hal_ll_adc_hw_init(
        map->channel,
        map->resolution,
        map->vref_input
    );
}
